# py_mine

./: .coverage  .flake8  .pre-commit-config.yaml  README.md  minesweeper.py  prototype.ipynb  pyproject.toml
configuration/: config.yaml
modules/: __init__.py  mine_field.py
src/py_mine/: __init__.py  mine_field.py  minesweeper.py
src/py_mine/configuration/: __init__.py  config.yaml
