[tool.poetry]
name = "py-mine"
version = "0.1.0"
description = "A small implementation of mine sweeper using pygame"
authors = ["Daniel Suveges <daniel.suveges@protonmail.com>"]
readme = "README.md"
packages = [{include = "py_mine"}]

[tool.poetry.dependencies]
python = "3.8.15"
pygame = "^2.1.3"
numpy = "^1.24.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
black = {version = "^22.6.0", allow-prereleases = true}
flake8 = "^5.0.4"
mypy = "^0.971"
flake8-annotations = "^2.9.1"
flake8-broken-line = "0.5.0"
flake8-bugbear = "22.7.1"
flake8-comprehensions = "3.10.0"
flake8-eradicate = "1.3.0"
flake8-quotes = "3.3.1"
flake8-simplify = "0.19.3"
flake8-tidy-imports = "4.8.0"
flake8-type-checking = "2.1.2"
flake8-typing-imports = "1.12.0"
flake8-use-fstring = "1.4"
pep8-naming = "^0.13.2"
interrogate = "^1.5.0"
isort = "^5.12.0"
darglint = "^1.8.1"
flake8-docstrings = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
