[tool.poetry]
name = "py-mine"
version = "0.1.0"
description = "A small implementation of mine sweeper using pygame"
authors = ["Daniel Suveges <daniel.suveges@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.15"
pygame = "^2.1.3"
numpy = "^1.24.2"
hydra-core = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.15.0"
black = {version = "^22.6.0", allow-prereleases = true}
mypy = "^0.971"
pep8-naming = "^0.13.2"
interrogate = "^1.5.0"
isort = "^5.12.0"
darglint = "^1.8.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
