[project]
name = "py-mine"
version = "0.1.0"
description = "A small implementation of mine sweeper using pygame"
authors = [{ name = "Daniel Suveges", email = "daniel.suveges@protonmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.1.3,<3",
    "numpy>=1.24.2,<2",
    "hydra-core>=1.3.1,<2",
]

[dependency-groups]
dev = [
    "pre-commit>=2.15.0,<3",
    "black>=22.6.0,<23",
    "mypy>=0.971,<1",
    "pep8-naming>=0.13.2,<1",
    "interrogate>=1.5.0,<2",
    "isort>=5.12.0,<6",
    "darglint>=1.8.1,<2",
    "ruff>=0.1.14,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_mine"]

[tool.hatch.build.targets.wheel.force-include]
"src/py_mine/configuration" = "py_mine/configuration"

[project.scripts]
minesweeper = "py_mine.minesweeper:main"
